<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_gravity="center"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:background="@drawable/memverselogo"
                android:contentDescription="Memverse Logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- todo: use proper font, semibold, etc. try going tback to 45dp font
            when all controls have right fonts and edit texts have sizes ...-->
            <Button
                android:id="@+id/button_signin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textAllCaps="true"
                android:layout_marginTop="12dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:background="@color/medium_green" />

            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="18sp"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/not_a_member"
                    tools:text="Not a member?"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/button_signup"
                    android:textSize="18sp"
                    android:textColor="@color/medium_green"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/sign_up"
                    tools:text="Sign up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <TextView
                android:layout_gravity="bottom|end"
                android:id="@+id/button_privacy_policy"
                android:textSize="12sp"
                android:textColor="@color/medium_green"
                android:text="@string/privacy_policy"
                tools:text="Privacy Policy"
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <!-- https://docs.google.com/document/d/1h15tWfMvr-a3g9mnDZ7PxEagql9c8nlTURuvRCI3nPE/edit?usp=sharing -->


        </LinearLayout>

    </ScrollView>
</LinearLayout>